# pycel

./: Cargo.toml  README.md  bench.py  main.py  pyproject.toml
python/pycel/: __init__.py
python/rust_python_example/: __init__.py  types.py
src/: lib.rs  main.rs
