[package]
name = "pycel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pycel"
crate-type = ["cdylib"]

[dependencies]
# cel-interpreter = "0.4.1"
cel-interpreter = { git = "https://github.com/clarkmcc/cel-rust.git", branch = "thread-safety"}
pyo3 = "0.19.0"
